Bitcoin: enforce RPC allowlist, exact amounts, address validation, and process timeouts